@@ -74,7 +74,33 @@ x - 1
 [1]
 
 [[1], Mat(1)]
+[0.E-38, -3.1356028349282496289992466889123954235 E-39, -6.60051645074953159
+00700991108611527795 E-40, 1.1073849293427036872827738448743471865 E-39, 2.0
+000000000000000000000000000000000000, 2.500000000000000000000000000000000000
+0, 2.5000000000000000000000000000000000000]~
+[[0.E-38, -3.1356028349282496289992466889123954235 E-39, -6.6005164507495315
+900700991108611527795 E-40, 1.1073849293427036872827738448743471865 E-39, 2.
+0000000000000000000000000000000000000, 2.50000000000000000000000000000000000
+00, 2.5000000000000000000000000000000000000]~, [0.70710678118654752440084436
+210484903928, 0.E-38, 0.E-38, 0.E-38, 0.707106781186547524400844362104849039
+29, 0.E-38, 0.E-38; 0.70710678118654752440084436210484903929, 0.E-38, 0.E-38
+, 0.E-38, -0.70710678118654752440084436210484903928, 0.E-38, 0.E-38; 0.E-38,
+ 0.23999696351543677575648770150590372098, -0.283622172709065437120208223985
+82804906, 0.67967633521490150959346301374385356331, 0.E-38, 0.61582013154270
+957217214628524015061291, 0.14410262172049431191936511310596050606; 0.E-38, 
+0.57468823740117602493745785679291224747, 0.48651107386360438477651495190903
+150502, -0.18177019777953707317421657491323056668, 0.E-38, 0.053249148722421
+216995940588902203986718, 0.63020990801504974979984540216856201701; 0.E-38, 
+-0.24043700257187013561719500269086834184, 0.2838014394622370296006228261461
+4643943, 0.67944594395243594261215492515632318777, 0.E-38, -0.58291034776025
+522011810821578892183638, 0.24538852147975121227580790648499184101; 0.E-38, 
+0.74377206690669372496948296733199987942, -0.1583407288019554674288185058434
+1540904, 0.14741548796449545166318703395156923765, 0.E-38, -0.41350755603228
+008533391235202071506688, -0.47855146129147985876298725459512205052; 0.E-38,
+ -0.033586419572483189091808052063575280391, 0.75976996171045044547062225467
+793619648, 0.14704270707111516638694570644189499592, 0.E-38, 0.3273486235274
+0451628393369366728230362, -0.54114958992381541523203116716439231357]]
   ***   at top-level: charpoly(Mod('b,'b^2+Mod('a,'a^2+1)),'newvar)
   ***                 ^---------------------------------------------
   *** charpoly: incorrect priority in RgXQ_charpoly: variable newvar < a
-Total time spent: 9
+Total time spent: 4
