@@ -50,5 +50,10 @@ mateigen([;],1)
 mateigen(Mat(1))
 mateigen(Mat(1),1)
 
+t=sqrt(5);
+M=[1,-1,0,0,0,0,0;-1,1,0,0,0,0,0;0,0,1,(t-1)/4,(-t-1)/4,(-t-1)/4,(t-1)/4;0,0,(t-1)/4,1,(t-1)/4,(-t-1)/4,(-t-1)/4;0,0,(-t-1)/4,(t-1)/4,1,(t-1)/4,(-t-1)/4;0,0,(-t-1)/4,(-t-1)/4,(t-1)/4,1,(t-1)/4;0,0,(t-1)/4,(-t-1)/4,(-t-1)/4,(t-1)/4,1];
+mateigen(M)
+mateigen(M,1)
+
 \\ Errors, keep at end of file
 charpoly(Mod('b, 'b^2 + Mod('a,'a^2+1)), 'newvar)
